--- a/index.html
+++ b/index.html
@@ -630,9 +630,9 @@
     <h1>About</h1>
 
     <p>I am a Ph.D. candidate in Computer Science at Georgia Tech. I am working with 
-<a href="https://vsarkar.cc.gatech.edu/" target="_blank" rel="noopener">Dr. Vivek Sarkar</a> in 
+<a href="https://vsarkar.cc.gatech.edu/" target="_blank" rel="noopener">Dr. Vivek Sarkar</a> in the 
 <a href="https://habanero.cc.gatech.edu/" target="_blank" rel="noopener">Habanero Extreme Scale Software Research Lab</a> and 
-<a href="https://www.cs.rice.edu/~as143/" target="_blank" rel="noopener">Dr. Anshumali Shrivastava</a> in 
+<a href="https://www.cs.rice.edu/~as143/" target="_blank" rel="noopener">Dr. Anshumali Shrivastava</a> in the 
 <a href="http://rushlab.blogs.rice.edu/" target="_blank" rel="noopener">RUSH Lab</a>. My current research focuses on an intersection of Parallel Computing, Performance Optimization, and Machine Learning for Big Data.</p>
 
 
