--- a/index.html
+++ b/index.html
@@ -634,6 +634,9 @@
 <a href="https://habanero.cc.gatech.edu/" target="_blank" rel="noopener">Habanero Extreme Scale Software Research Lab</a> and 
 <a href="https://www.cs.rice.edu/~as143/" target="_blank" rel="noopener">Dr. Anshumali Shrivastava</a> in the 
 <a href="http://rushlab.blogs.rice.edu/" target="_blank" rel="noopener">RUSH Lab</a>. My current research focuses on an intersection of Parallel Computing, Performance Optimization, and Machine Learning for Big Data.</p>
+<p><strong>Quick links:</strong> 
+<a href="/cv/Ankush_Mandal_CV.pdf">CV</a> | 
+<a href="/cv/Ankush_Mandal_Resume.pdf">Resume</a></p>
 
 
     <div class="row">
