--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
   
     
   
-  <meta name="description" content="Ph.D. Candidate in School of Computer Science">
+  <meta name="description" content="Ph.D. in Computer Science">
 
   
   <link rel="alternate" hreflang="en-us" href="https://ankushmandal.github.io/404.html">
@@ -233,7 +233,7 @@
   <meta property="og:site_name" content="Ankush Mandal">
   <meta property="og:url" content="https://ankushmandal.github.io/404.html">
   <meta property="og:title" content="404 Page not found | Ankush Mandal">
-  <meta property="og:description" content="Ph.D. Candidate in School of Computer Science"><meta property="og:image" content="https://ankushmandal.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="Ph.D. in Computer Science"><meta property="og:image" content="https://ankushmandal.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="https://ankushmandal.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
