--- a/publication/mandal-2019-gpusketch/index.html
+++ b/publication/mandal-2019-gpusketch/index.html
@@ -627,7 +627,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>(In preparation &mdash; draft copy available on request)</em></div>
+          <div class="col-12 col-md-9"><em>(In Submission)</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
